# matchina

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_en.md  data-collection-guide.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/: collected_data.csv
data/cleaned/: cleaned_data.json  cleaning_report.json
examples/: basic_usage.py
matchina/: __init__.py
matchina/core/: __init__.py  matcher.py  strategies.py
matchina/data/: __init__.py  entities.db  entities.db.backup  storage.py
matchina/models/: __init__.py  entity.py
matchina/utils/: __init__.py  normalizer.py
scripts/: check-docs.py  clean_data.py  collect_data.py  collect_data_extended.py  expand_dataset.py  import_to_db.py  init_db.py  publish.sh
tests/: test_data.json  test_matcher.py
